--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Belge.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Belge.cshtml
@@ -388,7 +388,7 @@
     function BelgeNoGetir() {
         return new Promise((resolve, reject) => {
             $.ajax({
-                url: "http://192.168.2.13:83/api/shipping/" + SayfaTipi,
+                url: "http://192.168.2.13:83/api/belge/exec/3",
                 type: 'GET',
                 success: function (data) {
                     if (data.length > 0) {
@@ -420,7 +420,7 @@
     }
 
     function BelgeNoDegisti() {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + SayfaTipi;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/3";
 
         $.getJSON(ProcUrl, function (data) {
             $('#BELGE_NO').html(data[0].SIRADAKI_BELGE_NO)
