--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
@@ -10,18 +10,18 @@
             <i data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Yeni Belge Oluştur</span>" onclick="YeniBelgeOlustur()" id="YeniBelgeOlusturButton" class="bi bi-file-earmark-plus-fill i-disabled" style="color:#203289; font-size: x-large;"></i>
             <i data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Araç Bilgi Girişi</span>" onclick="AracBilgiGiris()" id="AracBilgiGirisButton" class="bx bxs-truck" style="color:#203289; font-size: x-large;"></i>
         </div>
-        
+
         <div class="col" style="display: flex; justify-content: end; align-items: baseline; gap: 0.5rem;">
             <p id="TONAJ_PROGRESS" class="meter mt-1" style="height: auto;border: 1px solid #d9dee3;border-radius: 5px;width:160px;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>TONAJ BİLGİSİ BULUNAMADI</span>">
-                <span id="TONAJ_ORAN" style="width:0%;">
+                <span id="TONAJ_ORAN" style="width: 0%; display: block; background-color: #07e655; animation: progressBar 1s ease-in-out; animation-fill-mode: both; ">
                     <span class="progress custom-progress" id="progress-msip" style=" height: 1.5rem; border-radius: 0.25rem !important;">
-                        <span id="TONAJ_ORAN_TEXT" style="text-align: end; font-size: initial; text-wrap: nowrap;">0%<span>
-                    </span>
-                </span>
+                        <span id="TONAJ_ORAN_TEXT" style="text-align: end; font-size: initial; text-wrap: nowrap;">
+                            0%<span>
+                            </span>
+                        </span>
             </p>
         </div>
     </div>
-
     <div class="row w-100 d-flex justify-content-start align-items-center belge-bilgi" style="padding-left: 1rem; row-gap: 0.5rem;">
         <div class="col-12 col-sm-6 col-md-3">
             <div class="form-label-group outline m-0">
@@ -676,7 +676,7 @@
 
     function BelgeKaydet()
     {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + SayfaTipi;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/3";
 
         var BelgeNoDurumu = false;
 
