--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Seri_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Seri_Modal.cshtml
@@ -77,7 +77,9 @@
 
         if ($('#STOK_SECIM').val() !== '')
         {
-            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + $('#STOK_SECIM').val() + "/" + CikisDepo;
+            var STOK_KODU = $('#STOK_SECIM').find(':selected').data('stok-kodu');
+
+            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + STOK_KODU + "/" + CikisDepo;
 
             var BarkodNoListesi = [];
 
@@ -198,7 +200,8 @@
                 {
                     if (!BarkodNoTablodaVarMi(each))
                     {
-                        var FiltreliDetay = DetayBilgisi.filter(x => x.SIPARIS_NO == $('#SİPARİS_NO').html() && x.STOK_KODU == $('#STOK_SECIM').val());
+                        var STOK_KODU = $('#STOK_SECIM').find(':selected').data('stok-kodu');
+                        var FiltreliDetay = DetayBilgisi.filter(x => x.SIPARIS_NO == $('#SİPARİS_NO').html() && x.STOK_KODU == STOK_KODU);
 
                         Kayitlar.push({
                             "ID": Kayit_ID,
