--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporuBelgeList_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporuBelgeList_Modal.cshtml
@@ -371,7 +371,7 @@
     }
     function KalinlikFormatter(value, index, row) {
         if (value?.toString().trim().length > 0) {
-            return value;
+            return GenislikKalinlikFormat(value);
         }
 
         return "-";
@@ -379,7 +379,7 @@
 
     function GenislikFormatter(value, index, row) {
         if (value?.toString().trim().length > 0) {
-            return value;
+            return GenislikKalinlikFormat(value);
         }
 
         return "-";
@@ -392,7 +392,7 @@
 
 <script>
     function YeniBelgeNoGetir() {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + PageType;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/1";
 
         var BelgeNo = "";
 
@@ -408,7 +408,7 @@
     }
 
     function BelgeNoDegisti() {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + PageType;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/1";
 
         $.getJSON(ProcUrl, function (data)
         {
@@ -435,7 +435,7 @@
     function BelgeNoGuncelMi() {
         return new Promise((resolve, reject) =>
         {
-            var ProcUrl = "http://192.168.2.13:83/api/shipping/" + PageType;
+            var ProcUrl = "http://192.168.2.13:83/api/belge/exec/1";
 
             $.ajax({
                 type: 'GET',
