--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nova | MES</title>
+    <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
