--- a/NOVA/wwwroot/css/Site.css
+++ b/NOVA/wwwroot/css/Site.css
@@ -22,9 +22,14 @@ main {
     box-sizing: border-box;
 }
 
-*:focus {
-    box-shadow: none !important;
+* {
+    outline: none !important;
 }
+
+    *:focus {
+        box-shadow: none !important;
+        outline: none !important;
+    }
 
 #nova-progress-overlay {
     position: fixed;
@@ -33,9 +38,8 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 59999;
+    z-index: 5999;
     background-color: #00000070;
-    pointer-events: none;
 }
 
 .progress-image{
