--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
@@ -1,4 +1,44 @@
-﻿
+﻿<div class="modal fade" id="stok-secim-modal" data-bs-backdrop="static" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header d-flex justify-content-center align-items-center">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">STOK SEÇİMİ</h1>
+            </div>
+            <div class="modal-body">
+                <table id="stok-secim-table"
+                       data-search="false"
+                       data-show-refresh="false"
+                       data-show-toggle="false"
+                       data-show-fullscreen="false"
+                       data-show-columns="false"
+                       data-show-columns-toggle-all="false"
+                       data-detail-view="false"
+                       data-show-export="false"
+                       data-click-to-select="true"
+                       data-minimum-count-columns="2"
+                       data-show-pagination-switch="false"
+                       data-page-size="5"
+                       data-page-list="[5,20,50,100]"
+                       data-pagination="false"
+                       data-id-field="id"
+                       data-show-footer="false"
+                       data-mobile-responsive="true"
+                       data-locale="tr-TR">
+                    <thead>
+                        <tr>
+                            <th data-field="SIRA" data-halign="center" data-align="center">SİP. SIRA</th>
+                            <th data-field="STOK_ADI" data-halign="center" data-align="center">STOK ADI</th>
+                            <th data-field="BAKIYE_MIKTARI" data-halign="center" data-align="center">SİPARİŞ BAKİYE</th>
+                            <th data-halign="center" data-align="center" data-formatter="StokSecimIslemFormatter">İŞLEM</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="qr-scanner-area">
     <video id="qr-scanner"></video>
     <div class="qr-controls">
@@ -100,7 +140,7 @@
                 if (MultipleCamera) {
                     document.getElementsByClassName('qr-camera-select')[0].value = cameras[1].id;
                 }
-                
+
                 Scanner.start(MultipleCamera ? cameras[1] : cameras[0]).then(() => { $('.qr-scanner-loader').fadeOut(); });
 
                 document.getElementsByClassName('qr-camera-select')[0].addEventListener("change", event => {
@@ -158,58 +198,43 @@
         }
     }
 
-
-    function BarkodKontrol(BarkodNo) {
+    function BarkodVerisiKontrol(BarkodNo, Sira) {
         var ProcUrl = "http://192.168.2.13:83/api/seri/bakiye/" + BarkodNo + "/" + CikisDepo;
 
         $.getJSON(ProcUrl, function (data) {
             if (data.length > 0) {
-                var Siparis = DetayBilgisi.filter(x => x.SIPARIS_NO == $('#SİPARİS_NO').html() && x.STOK_KODU == data[0].STOK_KODU);
+                if (!BarkodNoTablodaVarMi(BarkodNo)) {
+                    if (data[0].MIKTAR > 0 || data[0].MIKTAR2 > 0) {
+                        StokAdiSec(Sira);
 
-                if (Siparis.length > 0) {
-                    if (!BarkodNoTablodaVarMi(BarkodNo)) {
-                        if (data[0].MIKTAR > 0 || data[0].MIKTAR2 > 0) {
-                            StokAdiSec(data[0].STOK_KODU);
-                            
-                            $('#MIKTAR').val(data[0].MIKTAR <= Siparis[0].BAKIYE_MIKTARI ? data[0].MIKTAR.toFixed(2) : Siparis[0].BAKIYE_MIKTARI.toFixed(2));
-                            $('#MIKTAR2').val(data[0].MIKTAR2.toFixed(2));
-                            $('#SERI_NO').val(BarkodNo);
-                            $('#ACIK1').val(data[0].ACIK1);
-                            $('#ACIK2').val(data[0].ACIK2);
-                            $('#ACIK3').val(data[0].ACIK3);
-                            $('#SERI_NO_3').val(data[0].SERI_NO_3);
-                            $('#SERI_NO_4').val(data[0].SERI_NO_4);
+                        $('#MIKTAR').val(data[0].MIKTAR.toFixed(2));
+                        $('#MIKTAR2').val(data[0].MIKTAR2.toFixed(2));
+                        $('#SERI_NO').val(BarkodNo);
+                        $('#ACIK1').val(data[0].ACIK1);
+                        $('#ACIK2').val(data[0].ACIK2);
+                        $('#ACIK3').val(data[0].ACIK3);
+                        $('#SERI_NO_3').val(data[0].SERI_NO_3);
+                        $('#SERI_NO_4').val(data[0].SERI_NO_4);
 
-                            $('#MIKTAR').prop('max', data[0].MIKTAR <= Siparis[0].BAKIYE_MIKTARI ? data[0].MIKTAR : Siparis[0].BAKIYE_MIKTARI);
-                            $('#MIKTAR2').prop('max', data[0].MIKTAR2.toFixed(2));
+                        $('#MIKTAR').prop('max', data[0].MIKTAR.toFixed(2));
+                        $('#MIKTAR2').prop('max', data[0].MIKTAR2.toFixed(2));
 
-                            SeciliBarkodVar = true;
+                        SeciliBarkodVar = true;
 
-                            MiktarGirisKontrolu();
-                            GirisDurumlariniDegistir(false);
-                            SevkFormKayitDurumu();
+                        MiktarGirisKontrolu();
+                        GirisDurumlariniDegistir(false);
+                        SevkFormKayitDurumu();
 
-                            $('#SeriNoListeButton').prop('disabled', true);
+                        $('#SeriNoListeButton').prop('disabled', true);
 
-                            Close();
-                        }
-                        else {
-                            //UYARI -- miktar uyarısı
-                        }
-                    }
-                    else {
-                        Swal.fire({
-                            text: "Aynı barkod no tablo üzerinde mevcut.",
-                            icon: "error",
-                            showConfirmButton: false,
-                            timer: '1500',
-                            target: document.getElementsByClassName("qr-controls")[0],
-                        });
+                        Close();
+
+                        $('#stok-secim-modal').modal('hide');
                     }
                 }
                 else {
                     Swal.fire({
-                        text: "Okunan barkod no sipariş içerisinde bulunmamaktadır.",
+                        text: "Aynı barkod no tablo üzerinde mevcut.",
                         icon: "error",
                         showConfirmButton: false,
                         timer: '1500',
@@ -229,5 +254,64 @@
         });
 
         MiktarGirisKontrolu();
+    }
+
+    function BarkodKontrol(BarkodNo) {
+
+        if (!BarkodNoTablodaVarMi(BarkodNo)) {
+            var ProcUrl = "http://192.168.2.13:83/api/seri/bakiye/" + BarkodNo + "/" + CikisDepo;
+
+            $.getJSON(ProcUrl, function (data) {
+                if (data.length > 0) {
+                    var Siparis = DetayBilgisi.filter(x => x.SIPARIS_NO == $('#SİPARİS_NO').html() && x.STOK_KODU == data[0].STOK_KODU);
+
+                    if (Siparis.length > 1) {
+
+                        Siparis.map((obj) => { obj["OKUNAN_BARKOD"] = BarkodNo; return obj; });
+
+                        $('#stok-secim-table').bootstrapTable("destroy");
+                        $('#stok-secim-table').bootstrapTable({ data: Siparis });
+
+                        $('#stok-secim-modal').modal('show');
+                    }
+                    else if (Siparis.length == 1) {
+                        BarkodVerisiKontrol(BarkodNo, 1);
+                    }
+                    else {
+                        Swal.fire({
+                            text: "Okunan barkod no sipariş içerisinde bulunmamaktadır.",
+                            icon: "error",
+                            showConfirmButton: false,
+                            timer: '1500',
+                            target: document.getElementsByClassName("qr-controls")[0],
+                        });
+                    }
+                }
+                else {
+                    Swal.fire({
+                        text: "Okunan barkod no sipariş içerisinde bulunmamaktadır.",
+                        icon: "error",
+                        showConfirmButton: false,
+                        timer: '1500',
+                        target: document.getElementsByClassName("qr-controls")[0],
+                    });
+                }
+            });
+
+            MiktarGirisKontrolu();
+        }
+        else {
+            Swal.fire({
+                text: "Aynı barkod no tablo üzerinde mevcut.",
+                icon: "error",
+                showConfirmButton: false,
+                timer: '1500',
+                target: document.getElementsByClassName("qr-controls")[0],
+            });
+        }
+    }
+
+    function StokSecimIslemFormatter(e, index, row) {
+        return `<button class="btn btn-primary" type="button" onclick="BarkodVerisiKontrol('${index.OKUNAN_BARKOD}', '${index.SIRA}')">SEÇ</button>`
     }
 </script>
