--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Belge_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Belge_Modal.cshtml
@@ -348,7 +348,7 @@
 
 <script>
     function GuncelBelgeNoGetir() {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + SayfaTipi;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/2";
 
         var BelgeNo = "";
 
@@ -500,7 +500,7 @@
 
     function BelgeNoGuncelMi() {
         return new Promise((resolve, reject) => {
-            var ProcUrl = "http://192.168.2.13:83/api/shipping/" + SayfaTipi;
+            var ProcUrl = "http://192.168.2.13:83/api/belge/exec/2";
 
             $.ajax({
                 type: 'GET',
@@ -523,7 +523,7 @@
     }
 
     function BelgeNoDegisti() {
-        var ProcUrl = "http://192.168.2.13:83/api/shipping/" + SayfaTipi;
+        var ProcUrl = "http://192.168.2.13:83/api/belge/exec/2";
 
         $.getJSON(ProcUrl, function (data) {
             $('#BELGE_NO').html(data[0].SIRADAKI_BELGE_NO)
