--- a/NOVA/Views/Shared/Layout_Empty.cshtml
+++ b/NOVA/Views/Shared/Layout_Empty.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-    <title id="title">Nova | Efece Galvaniz</title>
+    <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
